apps/base/games/foundryvtt/ingressroute-tls.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: foundryvtt-tls
spec:
  entryPoints:
    - websecure
  routes: # TODO Set api with no auth
    - kind: Rule
      match: Host(`foundryvtt.${CLUSTER_DOMAIN}`) # TODO Replace with variable
      services:
        - name: foundryvtt
          port: 30000
      middlewares:
        - name: traefik-secure-headers
          namespace: kube-system
        - name: traefik-forward-auth
          namespace: kube-system
  tls:
    certResolver: cloudflare
